<resources>
    <string name="app_name">PostKeeper</string>
    <string name="app_center_id">915f3408-1a1d-4330-be5a-0dcce9f98f89</string>
    <string name="news_api">https://newsapi.org/v2/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Entradas</string>
    <string name="title_news">Noticias</string>
    <string name="entry_form_title_string">Titulo</string>
    <string name="entry_form_author_title">Autor</string>
    <string name="entry_form_body_title">Mensaje</string>
    <string name="entry_form_button_text">Guardar</string>
    <string name="entries_list_title_text">Entradas</string>
    <string name="todo">TODO</string>
    <string name="chip_filter_title">Titulo</string>
    <string name="chip_filter_author">Autor</string>
    <string name="chip_filter_content">Contenido</string>
    <string name="entries_list_title_not_connection">No hay conexión a internet</string>
    <string name="news_list_title_text">Noticias</string>
    <string name="postkeeper_db">postkeeper_db</string>
</resources>